@@ -96,18 +96,15 @@ install () {
         echo "Linking Pandora FMS Agent configuration to $PANDORA_CFG/pandora_agent.conf..."
         ln -s $PANDORA_HOME/pandora_agent.conf $PANDORA_CFG
 
-        echo "Linking Pandora FMS Agent user configuration to $PANDORA_CFG/pandora_user.conf..."
-        ln -s $PANDORA_HOME/pandora_user.conf $PANDORA_CFG
-        
         echo "Setting secure permissions and ownership for all Pandora FMS Agent files..."
         chown -R root $PANDORA_HOME
         chmod -R 600 $PANDORA_TEMP/data_out
         chmod 640 $PANDORA_LOG
         chgrp 3 $PANDORA_LOG
-        echo "Copyng start-up daemon script at $PANDORA_STARTUP";
+        echo "Copying start-up daemon script at $PANDORA_STARTUP";
         cp -R pandora_fms $PANDORA_STARTUP
         chown -R root:wheel $PANDORA_STARTUP
-	chmod -R 644 $PANDORA_STARTUP
+	chmod -R 744 $PANDORA_STARTUP
 	chown -R root $PANDORA_BIN
         echo "Done."
         echo " "
